rust_example/src/bindings.rs

// These bindings are for reference only. Bindings are automatically
// generated via the build script for use in main.rs
/* automatically generated by rust-bindgen 0.71.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AppInterface {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AppDataInput {
    pub input_ffi: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of AppDataInput"][::std::mem::size_of::<AppDataInput>() - 8usize];
    ["Alignment of AppDataInput"][::std::mem::align_of::<AppDataInput>() - 8usize];
    ["Offset of field: AppDataInput::input_ffi"]
        [::std::mem::offset_of!(AppDataInput, input_ffi) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AppDataOutput {
    pub output_ffi: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of AppDataOutput"][::std::mem::size_of::<AppDataOutput>() - 8usize];
    ["Alignment of AppDataOutput"][::std::mem::align_of::<AppDataOutput>() - 8usize];
    ["Offset of field: AppDataOutput::output_ffi"]
        [::std::mem::offset_of!(AppDataOutput, output_ffi) - 0usize];
};
unsafe extern "C" {
    pub fn app_interface_new() -> *mut AppInterface;
}
unsafe extern "C" {
    pub fn app_interface_free(app: *mut AppInterface);
}
unsafe extern "C" {
    pub fn app_interface_update(
        app: *mut AppInterface,
        app_time_s: f64,
        input_data: *mut AppDataInput,
    ) -> AppDataOutput;
}
